# bazel-typescript

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  package.json  pnpm-lock.yaml
a/: BUILD.bazel  fractusPlugin.ts  index.ts  package.json  tv.ts  twMerge.ts
b/: BUILD.bazel  index.tsx  package.json  tsconfig.json
