bazel_dep(name = "aspect_bazel_lib", version = "2.9.1")
bazel_dep(name = "aspect_rules_js", version = "2.0.2")
bazel_dep(name = "aspect_rules_ts", version = "3.3.1")
bazel_dep(name = "rules_nodejs", version = "6.3.0")

# NodeJS setup
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.10.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npm_package_target_name = "{dirname}",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

# Expose pnpm
# TODO: Figure out how to keep the pnpm version matching package.json
pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(
    pnpm_version = "9.9.0",
    pnpm_version_integrity = "sha512-YMGKzROL/2ldM5vmrRP36TbupnRWYNTMSndtUkfFQNDt7hpWNpXBg6ZuuRfviPK0/rH8JfMqetytx6rzQ46ZwQ==",
)
use_repo(pnpm, "pnpm")

# Typescript support
rules_ts = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts.deps(ts_version_from = "@npm//:typescript/resolved.json")
use_repo(rules_ts, "npm_typescript")
