load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "a_lib",
    srcs = ["index.ts"],
    declaration = True,
    declaration_map = True,
    resolve_json_module = True,
    source_map = True,
    deps = [":node_modules/tailwind-variants"],
)

npm_package(
    name = "a",
    srcs = [
        "package.json",
        ":a_lib",
    ],
    visibility = ["//visibility:public"],
)
