load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "a_lib",
    srcs = [
        "fractusPlugin.ts",
        "index.ts",
        "tv.ts",
        "twMerge.ts",
    ],
    declaration = True,
    declaration_map = True,
    resolve_json_module = True,
    source_map = True,
    deps = [
        ":node_modules/tailwind-merge",
        ":node_modules/tailwind-variants",
        ":node_modules/tailwindcss",
    ],
)

npm_package(
    name = "a",
    srcs = [
        "package.json",
        ":a_lib",
    ],
    visibility = ["//visibility:public"],
)
