load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "b",
    srcs = ["index.tsx"],
    declaration = True,
    declaration_map = True,
    resolve_json_module = True,
    source_map = True,
    deps = [
        ":node_modules/@bazeltesting/a",
        ":node_modules/@types/react",
        ":node_modules/react",
        ":node_modules/tslib",
    ],
)
